umol-io/tests/sdf_parsing/snapshots/sdf_parsing__sdf_parsing_suite__run_conformance_test@pubchem_Structure2D_COMPOUND_CID_57392784.sdf.snap
---
source: umol-models-graph/tests/sdf_parsing/mod.rs
expression: results
---
expected_category: molecule
category: molecule
molecule:
  success: true
  compound_count: 1
  summaries:
    - sum_formula: C8Fe7MoO7S9-6
      atom_count: 32
      bond_count: 45
      property_count: 14
molecule_lenient:
  success: true
  compound_count: 1
  summaries:
    - sum_formula: C8Fe7MoO7S9-6
      atom_count: 32
      bond_count: 45
      property_count: 14
extended_molecule:
  success: true
  compound_count: 1
  extended_summaries:
    - sum_formula: C8Fe7MoO7S9-6
      atom_count: 32
      bond_count: 45
      extended_atoms: 0
      extended_bonds: 0
      property_count: 14
      rgroup_count: 0
      sgroup_count: 0
extended_molecule_lenient:
  success: true
  compound_count: 1
  extended_summaries:
    - sum_formula: C8Fe7MoO7S9-6
      atom_count: 32
      bond_count: 45
      extended_atoms: 0
      extended_bonds: 0
      property_count: 14
      rgroup_count: 0
      sgroup_count: 0
